--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,133 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-<div class="container-fluid">
-  <div class="row flex-nowrap">
-      <div class="col-auto px-0">
-          <div id="sidebar" class="collapse collapse-horizontal show border-end vh-100 shadow-sm">
-              <div id="sidebar-nav" class="list-group border-0 rounded-0">
-                  <div class="p-2">
-                      <h4>Admin Dashboard</h4>
-                  </div>
-                  <form class="d-flex p-2">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-primary" type="submit">Search</button>
-                  </form>
-                  <ul class="list-group">
-                      <li class="list-group-item"><a href="#" class="text-decoration-none text-black">
-                              Dashboard</a></li>
-                      <li class="list-group-item"> <a href="#"
-                              class="text-decoration-none text-black">Home</a> </li>
-                      <li class="list-group-item"> <a href="#"
-                              class="text-decoration-none text-black">Blogs</a> </li>
-                      <li class="list-group-item active" aria-current="true"> <a href="#"
-                              class="text-decoration-none text-white">Inbox</a> </li>
-                      <li class="list-group-item"> <a href="#"
-                              class="text-decoration-none text-black">Settings</a> </li>
-                  </ul>
-              </div>
-          </div>
-      </div>
-      <div class="col ps-md-2 pt-2">
-          <a href="#sidebar" role="button" aria-expanded="false" aria-controls="sidebar" data-bs-toggle="collapse"
-              class="border rounded-3 p-1 text-decoration-none"><i class="bi bi-list"></i></a>
-          <div class="page-header pt-3">
-              <h2>Bootstrap 5 Sidebar Menu</h2>
-          </div>
-          <hr>
-          <div class="row">
-              <div class="col-md-4">
-                  <div class="card shadow">
-                      <div class="card-body text-start">
-                          <h5 class="card-title">All Users</h5>
-                          <p class="card-text"><i class="bi bi-people mr-3"></i>600</p>
-                          <a href="#" class="btn btn-primary">See Table</a>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-4">
-                  <div class="card shadow">
-                      <div class="card-body text-start">
-                          <h5 class="card-title">All Blogs</h5>
-                          <p class="card-text"><i class="bi bi-people mr-3"></i>70</p>
-                          <a href="#" class="btn btn-primary">See Table</a>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-4">
-                  <div class="card shadow">
-                      <div class="card-body text-start">
-                          <h5 class="card-title">Inbox message</h5>
-                          <p class="card-text"><i class="bi bi-people mr-3"></i>100+</p>
-                          <a href="#" class="btn btn-primary">See Table</a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="mt-5">
-              <table class="table">
-                  <thead>
-                      <tr>
-                          <th scope="col">#</th>
-                          <th scope="col">First</th>
-                          <th scope="col">Last</th>
-                          <th scope="col">Handle</th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                      <tr>
-                          <th scope="row">1</th>
-                          <td>Mark</td>
-                          <td>Otto</td>
-                          <td>@mdo</td>
-                      </tr>
-                      <tr>
-                          <th scope="row">2</th>
-                          <td>Jacob</td>
-                          <td>Thornton</td>
-                          <td>@fat</td>
-                      </tr>
-                      <tr>
-                          <th scope="row">3</th>
-                          <td colspan="2">Larry the Bird</td>
-                          <td>@twitter</td>
-                      </tr>
-                  </tbody>
-              </table>
-          </div>
-      </div>
-  </div>
-</div>
+<app-demo-according-basic>
+
+</app-demo-according-basic>
+
+<app-button-example>
+  
+</app-button-example>
